[UTF-8][Japanese]

*Ver3.09C91SE : 2016/12/28

-大きな変更点
--IE8以前のサポートを止めました（関連コードを削除しました）。
--pop/akaneテーマを収録しました。
-システム面
--nginxに正式対応しました。((以前のものでも設定次第では動きます))
--ページキッシュ機能を実装しました。
--jQuery 3にアップデート。
-_top.htmlのサイドバーが反映されなかったのを修正し、その他更新しました。
-月別の記事一覧も、ブログ設定のコンテンツ分離を参照するようにしました。
-【plugin】プラグインイベントに #before/#after 修飾が追加されました。
-【テーマ】cuteテーマでサイドバー要素をクリックできない。
-【fix】perlキャッシュ環境で、DBの処理時間が0ms表示になり計測できないことがあった。
-【fix】CGI動作時、Text-DBで無駄な処理が発生していた。
-【fix】設定画面の「コメント許可対象」のUI動作が正しくなかった。
-【fix】テーマ表示テストの単一記事の仕様が古かった。
-【fix】スマホ表示の検索結果ボックスが横に大きすぎた。
-他

*Ver3.05 : 2016/11/12

-【fix】プラグインの再インストールを行うと、スマホメニューの設定情報が失われる。
-【Ver3.05a】default-logo.pngを更新
-【Ver3.05b】削除確認ダイアログが動作していなかった。

*Ver3.04 : 2016/11/11

-全文検索時、記事のタグも検索対象にしました。
-IE9以前の互換モードで起こるCSS XSS対策がまだ一部残っていたのでオフにしました。
-HTMLヘッダを自由に設定できるようになりました。([https://twitter.com/nomura_games/status/773850665340710912:Thanks to nomura])
-ドロップダウンメニューにタグ一覧を表示できるようになりました。（[https://twitter.com/goro_sanNomura/status/702506093340037121:Thanks to nomura]）
-記事入力画面を少し改良しました。
-【記法】数式入力を簡単にするTeXモードの実装
-【記法】麻雀記法の画像を別のものに変更しました。((麻雀記法を利用中の方は、ブログの再構築を実行してください。))
-【デザイン編集】はてなスタープラグインを追加（メイン部から）。
-【デザイン編集】ソーシャルボタンプラグインの表示をデフォルトでonにしました。
-【fix】adiary.conf.cgiの album_jpeg_quality の設定が有効にならない。（[http://adiary.blog.abk.nu/0387#c9:Thanks to 平山]）
-【fix】タグなし記事数に、非公開記事がカウントされてしまう。（[http://adiary.blog.abk.nu/0387#c4:Thanks to t-hide]）
-【fix】タグ一覧画面で、不正なタグ名を設定できてしまう。
-【fix】システムメニューを辿れないことがある。
-【fix】自動リンクを入力テキスト中で有効にしても、有効になっていなかった。
-【fix】Auth.multisession の設定が無効だった。((Auth.max_sessionsに設定項目が変更になっています。))
-【fix】プラグイン等で、タグ一覧やコンテンツ一覧のキャッシュが効き表示が更新されないことがある。
-【fix】Version2からの移行ツールで、関係ないブログのテーマが引き継がれてしまう。最初のブログのテーマ引き継ぎに失敗する。（[http://adiary.blog.abk.nu/0387#c1:Thanks to Yorkfield]）
-【fix】記事入力画面などで、タグやコンテンツの階層が、Firefox以外で分かりにくかった。
-【fix】mod_perlでの動作に問題があった。
-【fix】スマホメニューで、月別リストやタグリストを表示すると表示が崩れる。
-【fix】スマホメニューで4階層以上深くなると表示が崩れる。
-【fix】3階層目以降のタグがあったとき、タグ選択画面の表示が狂う。
-【fix】【記法】テーブル記法の末尾にある空コラムが無視されてしまう。（[http://adiary.blog.abk.nu/0387#c2:Thanks to Yorkfield]）