@@ -13,6 +13,7 @@
 -月別の記事一覧も、ブログ設定のコンテンツ分離を参照するようにしました。
 -【plugin】プラグインイベントに #before/#after 修飾が追加されました。
 -【テーマ】cuteテーマでサイドバー要素をクリックできない。
+-【fix】MarkdownでGMF Code Syntax（```～```）中の記法がパースされていた。
 -【fix】perlキャッシュ環境で、DBの処理時間が0ms表示になり計測できないことがあった。
 -【fix】CGI動作時、Text-DBで無駄な処理が発生していた。
 -【fix】設定画面の「コメント許可対象」のUI動作が正しくなかった。
